--- a/src/styles/card.sass
+++ b/src/styles/card.sass
@@ -1,2 +1,17 @@
 .card
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25)
+  background-color: white
+  border-radius: 20px
+  height: 290px
+  width: 443px
+  display: flex
+  flex-direction: column
+  justify-content: space-around
+  align-items: start
+  padding: 1.5rem 5.3rem
+  .details
+    h3
+      padding-bottom: 0.25rem
+      font-style: italic
+  .progress > *
+    padding-bottom: 0.25rem
