card layout & grid structure defined

--- a/src/styles/base.sass
+++ b/src/styles/base.sass
@@ -19,6 +19,11 @@ header
 
 main
   padding: var(--spacing)
+  display: grid
+  grid-template-columns: repeat(auto-fit, 443px)
+  gap: 2rem
+  justify-content: center
+  align-content: center
 
 h1
   @extend %typoShare
