--- a/src/styles/card.sass
+++ b/src/styles/card.sass
@@ -9,9 +9,22 @@
   justify-content: space-around
   align-items: start
   padding: 1.5rem 5.3rem
+  > *
+    width: 100%
+  .progress
+    h3
+      margin-bottom: 0.5rem
+    display: flex
+    flex-direction: column
+    gap: 0.5rem
+    .pages
+      display: flex
+      justify-content: space-between
+      gap: 0.5rem
   .details
     h3
       padding-bottom: 0.25rem
       font-style: italic
-  .progress > *
-    padding-bottom: 0.25rem
+  .actions
+    display: flex
+    justify-content: space-between
