--- a/src/styles/card.sass
+++ b/src/styles/card.sass
@@ -1,5 +1,10 @@
+@use "sass:math"
+@import "base"
+
 .card
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25)
+  transition-duration: 0.4s
+  transition-property: transform
   background-color: white
   border-radius: 20px
   height: 290px
@@ -11,6 +16,8 @@
   padding: 1.5rem 5.3rem
   > *
     width: 100%
+  a
+    @extend %interactionEffect
   .progress
     h3
       margin-bottom: 0.5rem
@@ -28,3 +35,15 @@
   .actions
     display: flex
     justify-content: space-between
+
+
+.add-book-card
+  display: flex
+  justify-content: center
+  align-items: center
+  opacity: 0.8
+  @extend %interactionEffect
+  img
+    opacity: 0.5
+    width: 8rem
+    height: 8rem
