data structure for library, completed book button & remove button functional

--- a/src/styles/progressBar.sass
+++ b/src/styles/progressBar.sass
@@ -1,5 +1,13 @@
 .progress-bar
   width: 100%
   height: 4px
-  background-color: var(--secondary)
   border-radius: 4px
+  display: flex
+  .full
+    border-radius: 4px
+    height: 100%
+    background-color: var(--secondary)
+  .empty
+    border-radius: 4px
+    height: 100%
+    background-color: var(--background)
