Fix little bugs on adding books UI

--- a/src/styles/base.sass
+++ b/src/styles/base.sass
@@ -63,4 +63,15 @@ input
     &:focus
       all: unset
 
+.add-book-btn
+  all: unset
+  cursor: pointer
 
+//  TODO restyle all inputs
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button
+  -webkit-appearance: none
+  margin: 0
+
+input[type="number"]
+  -moz-appearance: textfield
