--- a/src/styles/card.sass
+++ b/src/styles/card.sass
@@ -48,3 +48,9 @@
     opacity: 0.5
     width: 8rem
     height: 8rem
+
+.pages h4 input
+  width: 3rem
+  font-size: 1em
+  color: var(--primary)
+  border-radius: 0
