--- a/src/styles/addBookPage.sass
+++ b/src/styles/addBookPage.sass
@@ -28,3 +28,9 @@
     display: flex
     flex-direction: column
     gap: 0.25rem
+
+.add-book-form
+  form
+    display: flex
+    flex-direction: column
+    gap: 1rem
